Closed
Bug 451021
Opened 17 years ago
Closed 17 years ago
Mac OS X Address Book has erroneous spaces in display name when either (or) both of first and last name are blank
Categories
(MailNews Core :: Address Book, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9.1a2
People
(Reporter: standard8, Assigned: standard8)
References
Details
Attachments
(1 file)
|
1.05 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
The processing in the Mac OS X Address Book always assumes that first or last name will be filled in. This causes problems where one of them isn't:
* Neither first or last filled in, display name is " "
* First only filled in, display name is " last"
* last only filled in, display name is "first "
This is in the first name first case.
I noticed this whilst testing bug 243631/bug 381555 so we definitely need to fix it.
Attachment #334245 -
Flags: superreview?(bienvenu)
Attachment #334245 -
Flags: review?(bienvenu)
Updated•17 years ago
|
Attachment #334245 -
Flags: superreview?(bienvenu)
Attachment #334245 -
Flags: superreview+
Attachment #334245 -
Flags: review?(bienvenu)
Attachment #334245 -
Flags: review+
Mark, but why I get the email address inside the contact sidebar, when both names are missing? I just ask because of bug 446129 which I'm unable to reproduce. So bug 446129 is a dupe now?
Hardware: PC → All
| Assignee | ||
Comment 2•17 years ago
|
||
(In reply to comment #1)
> Mark, but why I get the email address inside the contact sidebar, when both
> names are missing? I just ask because of bug 446129 which I'm unable to
> reproduce. So bug 446129 is a dupe now?
>
See the comment I just put on that bug.
| Assignee | ||
Comment 3•17 years ago
|
||
Patch checked in, changeset id 136:e0d649f4e7c8
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Looks good with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a2pre) Gecko/20080819030054 Shredder/3.0b1pre ID:20080819030054
Status: RESOLVED → VERIFIED
Blocks: 446129
You need to log in
before you can comment on or make changes to this bug.
Description
•