Bug 451021 Mac OS X Address Book has erroneous spaces in display name when either (or) both of first and last name are blank. r/sr=bienvenu